--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ cchardet==2.1.1
 aiodns==1.1.1
 sqlalchemy_aio==0.12.0
 pymysql==0.8.1
-discord==0.16.12
+discord.py==0.16.12
 python-dateutil==2.7.3
