--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ pyyaml==3.12
 sqlalchemy==1.2.5
 click==6.7
 requests==2.18.4
-websockets==4.0.1
+websockets>=5.0,<6.0
 tornado==5.0.1
-aiohttp==3.0.0b0
+aiohttp>=3.3.0,<3.4.0
 cchardet==2.1.1
 aiodns==1.1.1
 sqlalchemy_aio==0.12.0
 pymysql==0.8.1
-discord.py==0.16.12
 python-dateutil==2.7.3
+https://github.com/Rapptz/discord.py/archive/607771c4f49a12d984d782883a580e7332359a10.zip
